feat(operator): 현장 스태프 인증 인가 체계 추가